# comments

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  manage.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2022_09_10_d5afd58be157_first.py  2022_09_11_e6f9b24a4ff7_add_auth.py
app/: app_logging.py  application.py  dependencies.py  resource.py  settings.py
app/api/v1/auth/: handlers.py  models.py  service.py
app/api/v1/comments/: handlers.py  models.py
app/api/v1/posts/: handlers.py  models.py
app/common/auth/: auth.py  auth_dependency.py  session.py
database/: crud.py  database.py  tables.py
tests/: conftest.py  test_api.py
